[project]
name = "indian_startup_content_intelligence"
version = "0.1.0"
description = "indian_startup_content_intelligence using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.11,<3.14"
dependencies = [
    "crewai[file-processing,litellm,tools,azure-ai-inference]==1.13.0",
    "feedparser>=6.0.10",
    "tavily-python>=0.5.0",
]

[project.scripts]
indian_startup_content_intelligence = "indian_startup_content_intelligence.main:run"
run_crew = "indian_startup_content_intelligence.main:run"
train = "indian_startup_content_intelligence.main:train"
replay = "indian_startup_content_intelligence.main:replay"
test = "indian_startup_content_intelligence.main:test"
run_with_trigger = "indian_startup_content_intelligence.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"

[tool.uv]
override-dependencies = ["litellm<=1.82.6"]
